--- a/style.css
+++ b/style.css
@@ -1,9 +1,200 @@
-.topnav a:hover {
+.topnav {
+    overflow: hidden;
+    background-color: #f0e0e086;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:hover {
     background-color: #ddd;
     color: black;
   }
-  
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: #2196F3;
     color: white;
-  }   
+  }
+  .topnav .search-container {
+    float: right;
+  }
+  .topnav input[type=text] {
+    padding: 6px;
+    margin-top: 8px;
+    font-size: 17px;
+    border: none;
+    width: 475px;
+  }
+  .topnav .search-container button {
+    float: right;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 20px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+  }
+  .topnav .search-container button:hover {
+    background: #ccc;
+  }
+  .dashTitile{
+    background-color: rgb(224, 203, 203);
+    width: 379px;
+    margin-left: -2px;
+    margin-top: 0;
+  }
+  #bar{
+    margin: 15px;
+  }
+  .Item{
+    margin-left: 110px;
+    color: #021B59;
+  }
+  .link{
+    margin-left: 90px;
+    color: #021B59;
+  }
+  .dash{
+    height: 580px;
+    width: 378px;
+    left: -3px;
+    top: 51px;
+    border-radius: 0px;
+    background-color:#ECEAEA;
+    margin-top: 0;
+    position: fixed;
+  }
+  h1{
+    margin: 20px;
+  }
+  .item{
+    margin-left: 70px;
+    text-decoration: none;
+    color: black;
+  }
+  
+  .botton-content{
+    position: absolute;
+    bottom: 5px;
+    right: 0px;
+  }
+  .e-walletDashboard{
+    height: 180px;
+    width: 990px;
+    left: 376px;
+    top: 51px;
+    border-radius: 0px;
+    position: absolute;
+    background: #000000;
+  }
+  .txt{
+    position: absolute;
+    left: calc(50% - 650px/2 + 8.5px);
+    top: 35px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 58px;
+    text-align: center;
+    color: #6CAFDF;
+  }
+  .logo{
+    position: absolute;
+    width: 83px;
+    height: 83.75px;
+    left: 40px;
+    top: 50px;
+    background: url(BUP Logo);
+  }
+  .box{
+    position: absolute;
+    width: 700px;
+    height: 400px;
+    left: 550px;
+    top: 190px;
+    background: #E9EDF0;
+    border-radius: 15px;
+  }
+  .BOX1{
+    box-sizing: border-box;
+    height: 130px;
+    position: absolute;
+    left: 10.96%;
+    right: 60.82%;
+    top: 15.35%;
+    bottom: 55.18%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(2, 27, 89, 0.4);
+    border: 1px solid #E8E8E8;
+    box-shadow: 12px 11px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+  }
+  .BOX2{
+    box-sizing: border-box;
+    height: 130px;
+    position: absolute;
+    left: 60.6%;
+    right: 11.18%;
+    top: 15.35%;
+    bottom: 55.18%;
+    width: 200px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(2, 27, 89, 0.4);
+    border: 1px solid #E8E8E8;
+    box-shadow: 12px 11px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+  }
+  .BOX3{
+    box-sizing: border-box;
+    position: absolute;
+    height:  130px;
+    left: 10.96%;
+    right: 60.82%;
+    top: 56.2%;
+    bottom: 30.32%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(2, 27, 89, 0.4);
+    border: 1px solid #E8E8E8;
+    box-shadow: 12px 11px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+  }
+  .BOX4{
+    box-sizing: border-box;
+    position: absolute;
+    height:  130px;
+    left: 60.6%;
+    right: 11.18%;
+    top: 56.25%;
+    bottom: 30.27%;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), rgba(2, 27, 89, 0.4);
+    border: 1px solid #E8E8E8;
+    box-shadow: 12px 11px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+  }
+  h4{
+    text-align: center;
+    margin: 30px;
+    color: #FFFFFF;
+    font-family: 'Inter';
+    font-style: normal;
+  }
+  @media screen and (max-width: 600px) {
+    .topnav .search-container {
+      float: none;
+    }
+    .topnav a, .topnav input[type=text], .topnav .search-container button {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;  
+    }
+  }
+  
